--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "@types/nodemailer": "^7.0.4",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -29,10 +31,11 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
-    "rate-limit-redis": "^4.2.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.12",
+    "rate-limit-redis": "^4.2.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.3",
     "zod": "^3.24.1"
