--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "@types/nodemailer": "^7.0.4",
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "discord.js": "^14.16.3",
